Worked on module functionality
- Setup site so nodemon works with just command
- defined structure of config.json files
- loaded config.json files in folders in modules folder
- dumped module information out

--- a/site/package.json
+++ b/site/package.json
@@ -2,7 +2,7 @@
   "name": "cornerstone-site",
   "version": "1.0.0",
   "description": "Front End of Cornerstone Framework",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
